# ros_sandbox

./: README.md
PLAA/: CMakeLists.txt  main.cpp  mainpage.dox  manifest.xml
PLAA/config/: pf_conf.rviz
PLAA/include/: astar.h  pf_localization.h
PLAA/include/PLAA/: pose.h
PLAA/src/: astar.cpp  pf_localization.cpp
PLAA/src/scripts/: map_frame.py
PLAA/srv/: pose.srv
extract_data_from_loam_bag/: CMakeLists.txt  mainpage.dox  manifest.xml
extract_data_from_loam_bag/src/: main.cpp
kinect_recorder/: CMakeLists.txt  README.md  mainpage.dox  manifest.xml
kinect_recorder/src/: main.cpp
rgbd_publisher/: CMakeLists.txt  mainpage.dox  manifest.xml
rgbd_publisher/src/: main.cpp
